@@ -3,6 +3,8 @@ Revision history for Perl extension App::Sqitch
 0.961
      - Fixed error when running on PostgreSQL 9.0.
      - Added support for PostgreSQL 8.4.
+     - Fixed the SQLite tests to skip the live tests when `sqlite3` cannot be
+       found.
 
 0.960  2013-04-05T23:04:35Z
      - Removed `-CAS` from the shebang line on Perl 5.10.0. This is to
